# moutons-marseille-land-prospect

./: .gitattributes  .gitignore  CLAUDE.md  COSIA_1-0__GPKG_LAMB93_D013_2023-01-01.md5  README.md  cles.txt  convert.py  diagnose.py  example.geojson  join_data.py  munch.py  ol-integration-mos-2022.geojson  ol-integration-mos.json  process.py  pyproject.toml  qgis-grass-meadows.geojson  qgis-grass-meadows.qmd  requirements.txt
.github/workflows/: deploy.yml
archive/: meadows_owners.geojson  process_mos.py
docs/: CNAME  app.css  app.js  index.html  index.template.html  ocs_ge_pasture.geojson  pasture_zones.geojson
docs/data/communes/: abries_ristolas.geojson  aiglun.geojson  aiguilles.geojson  aiguines.geojson  alleins.geojson  allemagne_en_provence.geojson  allons.geojson  allos.geojson  althen_des_paluds.geojson  amirat.geojson  ampus.geojson  ancelle.geojson  andon.geojson  angles.geojson  annot.geojson  ansouis.geojson  antibes.geojson  apt.geojson  archail.geojson  artignosc_sur_verdon.geojson  artigues.geojson  arvieux.geojson  ascros.geojson  aspremont.geojson  aspres_les_corps.geojson  aspres_sur_buech.geojson  aubenas_les_alpes.geojson  aubessagne.geojson  aubignan.geojson  aups.geojson  (+857 more)
front/: index.html  mos_2022_occsol_filtered.geojson
scripts/: build.py  build_and_import_paca.py  download_cadastre_amp.py  download_communes_geo.py  download_owners_paca.py  download_paca.py  import_parcelles_supabase.py  supabase_schema.sql
scripts/migrations/: 001_optimize_storage.sql
src/: __init__.py  cadastre.py  export.py  filters.py  land_cover.py  owners.py
(+1 files in other folders)
