[project]
name = "moutons-marseille-land-prospect"
version = "0.1.0"
description = "Prospection de terrains pâturables pour le projet Moutons Marseillais (métropole AMP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Moutons Marseillais" }]
keywords = ["gis", "pasture", "marseille", "urban-sheep", "ocsge"]
dependencies = [
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "shapely>=2.0",
    "tqdm>=4.66",
]

[project.urls]
Homepage   = "https://github.com/montons-marseillais/moutons-marseille-land-prospect"
Issues     = "https://github.com/montons-marseillais/moutons-marseille-land-prospect/issues"

[project.scripts]
build-pastures = "scripts.build:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]
